# Nevodchik

./: .gitignore  Containerfile  LICENSE  README.md  build-protobufs.sh  dload-protobufs.sh  pyproject.toml  pytest.ini  run-podman.sh
config/: messages.conf  nevodchik.conf
src/nevodchik/: broker.py  client_base.py  client_console.py  client_mqtt.py  client_telegram.py  config.py  connector_mqtt.py  decoder.py  decoder_meshtastic.py  main.py  message_processor.py  models.py  service_database.py  service_mqtt.py
tests/: conftest.py  test_client_mqtt.py
