[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"


[project]
version = "0.0.0"
name = "nevodchik"
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "paho-mqtt",
    "protobuf>=4.0",
    "pycryptodome==3.23.0"
]

classifiers = [
    "Private :: Do Not Upload"
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
    "python-dotenv>=0.20",
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0"
]

[tool.uv.build-backend]
module-name = "nevodchik"
module-root = "./src"


[project.scripts]
nevodchik = "nevodchik.main:run"
